--- a/app/src/main/res/layout/activity_signin_grant_access.xml
+++ b/app/src/main/res/layout/activity_signin_grant_access.xml
@@ -4,8 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:focusableInTouchMode="true"
     android:background="#fff"
+    android:focusableInTouchMode="true"
+    android:theme="@style/EditText"
     tools:context=".Activities.SignInGrantAccess">
 
     <TextView
@@ -35,9 +36,11 @@
         android:layout_marginStart="20dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="20dp"
-        android:hint="@string/password"
         android:fontFamily="@font/amarante"
+        android:hint="@string/password"
         android:textColorHint="@color/colorYellow"
+        app:boxBackgroundMode="outline"
+        app:boxStrokeColor="@color/colorYellow"
         app:passwordToggleEnabled="true"
         app:passwordToggleTint="@android:color/holo_orange_light">
 
@@ -46,7 +49,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:fontFamily="@font/amarante"
-            android:background="@drawable/edit_text_design"
             android:inputType="textPassword"
             android:maxLines="1"
             android:paddingStart="20dp"
