--- a/app/src/main/res/layout/profile_bottom_sheet.xml
+++ b/app/src/main/res/layout/profile_bottom_sheet.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:gravity="center_horizontal"
     android:background="#fff"
+    android:theme="@style/EditText"
     android:padding="16dp">
 
     <TextView
@@ -35,14 +36,15 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="20dp"
         android:fontFamily="@font/amarante"
-        android:textColorHint="@color/colorYellow">
+        android:textColorHint="@color/colorYellow"
+        app:boxStrokeColor="@color/colorYellow"
+        app:boxBackgroundMode="outline">
 
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/bottomSheetInput"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/edit_text_design"
             android:fontFamily="@font/amarante"
             android:inputType="text"
             android:maxLines="1"
