--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,4 +1,6 @@
 <resources>
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="image_size">300dp</dimen>
+    <dimen name="custom_marker_image">30dp</dimen>
+    <dimen name="custom_marker_padding">2dp</dimen>
 </resources>
