--- a/app/src/main/res/layout/fragment_tour.xml
+++ b/app/src/main/res/layout/fragment_tour.xml
@@ -438,7 +438,7 @@
                     android:layout_marginTop="5dp"
                     android:layout_marginEnd="20dp"
                     android:fontFamily="@font/amarante"
-                    android:hint="@string/meeting_place"
+                    android:hint="Meetup with Members"
                     android:textColorHint="@color/colorYellow"
                     app:boxBackgroundMode="outline"
                     app:boxStrokeColor="@color/colorYellow">
