--- a/app/src/main/res/layout/activity_event_details.xml
+++ b/app/src/main/res/layout/activity_event_details.xml
@@ -580,7 +580,7 @@
             android:layout_height="45dp"
             android:layout_below="@id/relative16"
             android:layout_marginTop="20dp"
-            android:layout_marginBottom="10dp">
+            android:layout_marginBottom="20dp">
 
             <Button
                 android:id="@+id/joinBtn"
@@ -632,6 +632,7 @@
             android:layout_centerHorizontal="true"
             android:paddingStart="10dp"
             android:paddingEnd="10dp"
+            android:layout_marginTop="20dp"
             android:layout_marginBottom="20dp"
             android:text="Event is running"
             android:textColor="@android:color/black"
@@ -647,7 +648,7 @@
             android:paddingStart="10dp"
             android:paddingEnd="10dp"
             android:layout_marginBottom="30dp"
-            android:text="Soory!! You are late."
+            android:text="Sorry!! You are late."
             android:textColor="@android:color/black"
             android:textSize="18sp"
             android:layout_below="@id/eventRunning"
