--- a/app/src/main/res/layout/activity_edit_comment.xml
+++ b/app/src/main/res/layout/activity_edit_comment.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
     android:focusableInTouchMode="true"
-    tools:context=".Activities.ReplyBox">
+    tools:context=".Activities.EditCommentActivity">
 
 
     <com.google.android.material.appbar.AppBarLayout
@@ -58,7 +58,7 @@
                             android:gravity="center_horizontal|center_vertical"
                             android:paddingStart="10dp"
                             android:paddingEnd="15dp"
-                            android:text="Reply"
+                            android:text="Edit"
                             android:textColor="@android:color/black"
                             android:textColorHint="@android:color/darker_gray"
                             android:textSize="17sp" />
@@ -85,7 +85,8 @@
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/comment_profileImage1"
             android:layout_width="40dp"
-            android:layout_height="40dp" />
+            android:layout_height="40dp"
+            android:src="@drawable/man" />
 
         <RelativeLayout
             android:id="@+id/crl1"
@@ -102,15 +103,20 @@
                 android:layout_height="wrap_content"
                 android:textColor="@android:color/black"
                 android:textSize="18sp"
+                android:text="MIH"
                 android:textStyle="bold" />
 
-            <TextView
+            <EditText
                 android:id="@+id/showMessage1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/senderName1"
                 android:textColor="@android:color/black"
-                android:textSize="18sp" />
+                android:text="You can edit here youe message"
+                android:textSize="18sp"
+                android:background="@null"
+                android:scrollbars="vertical"
+                android:maxLines="10" />
         </RelativeLayout>
 
         <TextView
@@ -119,65 +125,37 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/crl1"
             android:layout_marginStart="50dp"
+            android:text="Now"
+            android:inputType="textMultiLine"
             android:textColor="@color/color1"
             android:visibility="visible" />
     </RelativeLayout>
 
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/replyRecycler"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_above="@id/inputLayout2"
-        android:layout_below="@id/topRelativeLayout" />
-
-    <LinearLayout
-        android:id="@+id/inputLayout2"
+    <RelativeLayout
+        android:id="@+id/bottomLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:orientation="horizontal"
+        android:layout_below="@+id/topRelativeLayout"
         android:padding="5dp"
-        android:weightSum="5">
+        android:layout_marginTop="10dp">
 
-        <EditText
-            android:id="@+id/replyET"
-            android:layout_width="match_parent"
+        <Button
+            android:id="@+id/cancel"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:layout_marginStart="5dp"
-            android:layout_marginEnd="5dp"
-            android:layout_weight="4"
-            android:background="@drawable/chatbox_edittext_design"
-            android:gravity="top|start"
-            android:hint="Write a reply..."
-            android:inputType="textMultiLine"
-            android:maxLines="6"
-            android:minLines="1"
-            android:overScrollMode="always"
-            android:paddingStart="15dp"
-            android:paddingTop="10dp"
-            android:paddingEnd="15dp"
-            android:paddingBottom="10dp"
-            android:scrollbars="vertical"
-            android:textColor="@android:color/black"
-            android:textColorHint="@android:color/darker_gray"
-            android:textSize="18sp" />
+            android:text="Cancel"
+            android:layout_toStartOf="@+id/update" />
 
-        <ImageButton
-            android:id="@+id/sendReply"
-            android:layout_width="45dp"
-            android:layout_height="45dp"
-            android:layout_gravity="bottom"
-            android:layout_marginEnd="17dp"
-            android:layout_marginBottom="3dp"
-            android:layout_weight="0"
-            android:background="@drawable/send_button_design"
-            android:contentDescription="replyButton"
-            android:paddingStart="5dp"
-            android:paddingEnd="0dp"
-            android:src="@drawable/ic_send_blue" />
+        <Button
+            android:id="@+id/update"
+            android:layout_alignParentEnd="true"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="20dp"
+            android:focusable="false"
+            android:text="Update" />
 
-    </LinearLayout>
+    </RelativeLayout>
 
 </RelativeLayout>
